Tue Jan  5 14:24:52 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htcommon/DocumentRef.h: Added comments on the members (fields)
	of DocumentRef objects.

	* htcommon/defaults.cc: Added new option max_descriptions for
	limit on the number of descriptions to store (default 5, matches
	behavior pre 3.1.0b3).

	* htcommon/DocumentRef.cc: Support restriction of max_descriptions.

	* .version: Bump to 3.1.0b5dev.
	
Tue Jan  5 20:07:05 1999  Alexander Bergolth  <bergolth@ariel.wu-wien.ac.at>

	* htdig/Retriever.cc: fixed bug in bad_querystring detection

Sat Jan  2 16:39:34 1999  Alexander Bergolth  <leo@strike.wu-wien.ac.at>

	* htdig/main.cc, htlib/Configuration.cc: Added warning message if
	the locale selection was not successful. (e.g. because the locale
	definition is not installed) config["locale"] is now set to the
	return string of setlocale.

	* {.,htcommon,htdig,htfuzzy,htlib,htmerge,htnotify,htsearch}/
	Makefile.in, Makefile.config.in, configure.in: Changed to allow
	compiling in seperate build directories.

Fri Jan  1 05:49:19 1999  Hans-Peter Nilsson  <hp@axis.se>

	* htdoc/attrs.html: Describe more thoroughly how "pdf_parser"
	is used.

	* htdoc/attrs.html: Fix typo for anchor/attribute
	"allow_virtual_hosts".

	* htdoc/attrs.html: Correct and add more verbose description of
	external parser program parameters and fields.
	
Sun Dec 27 14:52:45 1998  Alexander Bergolth  <leo@strike.wu-wien.ac.at>

	* htlib/URL.cc: Small change in URL::removeIndex so that URLs are not
	stripped if a query string ends with /index.html

	* htsearch/Display.cc, htnotify/htnotify.cc: Added patches from
	Gilles Detillieux <grdetil@scrc.umanitoba.ca> to fix memory leaks.
	
Sat Dec 19 17:53:44 1998  Alexander Bergolth  <leo@strike.wu-wien.ac.at>

	* htdig/main.cc, htdig/htdig.h, htdig/Retriever.cc: Added new option
	bad_querystr. Allows exclusion when digging CGI-Scripts.

	* htsearch/htsearch.cc, htsearch/Display.cc: Added new option