@@ -1,3 +1,8 @@
+Tue Jan  5 20:57:02 1999  Alexander Bergolth  <bergolth@ariel.wu-wien.ac.at>
+
+	* configure.in, htlib/Connection.cc: Check for strings.h for those
+	platforms that don't have it.
+
 Tue Jan  5 14:24:52 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>
 
 	* htcommon/DocumentRef.h: Added comments on the members (fields)
